--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -72,15 +72,15 @@
 
 .cross {
   position: absolute;
-  width: var(--size-xl);
-  height: 1.5px;
+  width: var(--size-3xl);
+  height: 2px;
   background-color: black;
+  margin-right: 20px;
 }
 .one {
   transform: rotate(45deg);
 }
 .two {
-  /* position: relative; */
   transform: rotate(-45deg);
 }
 
