--- a/stylesheets/profile.css
+++ b/stylesheets/profile.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
 
   background: linear-gradient(90deg, #c98717, #ff00a6);
