--- a/stylesheets/toggle.css
+++ b/stylesheets/toggle.css
@@ -9,10 +9,9 @@
       align-items: center;
       justify-content: space-between;
       background-color: #5b21b6;
-      width: 55px;
+      width: 54px;
       border-radius: 100px;
       cursor: pointer;
-      /* box-shadow: 0 0 2px #5b21b6; */
   }
 
   .sun, .moon{
@@ -29,8 +28,8 @@
     width: 25px;
     height: 25px;
     border-radius: 200px;
-    transform: translateX(26px);
-    margin-left: 2px;
+    transform: translateX(100%);
+    margin: 2px;
     background-color: white;
     transition: ease transform 0.3s;
     z-index: 20;
