--- a/stylesheets/title.css
+++ b/stylesheets/title.css
@@ -1,8 +1,6 @@
 .dots {
   width: 8px;
   height: 8px;
-  background-color: #991eaf;
-  /* background: linear-gradient(90deg, #691eaf, #af1eaa); */
   border-radius: 50%;
   margin: 0;
   padding: 0;
@@ -10,13 +8,9 @@
 .headingContainer {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 .line {
-  /* background-color: #1e40af; */
-  background-color: #991eaf;
-  /* background-color: #af1e7f; */
-  /* background: linear-gradient(90deg, #691eaf, #af1eaa); */
   width: 15%;
   height: 2px;
   margin: 0;
