--- a/stylesheets/light.css
+++ b/stylesheets/light.css
@@ -4,7 +4,7 @@ body {
 }
 
 .sticky__navbar {
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   /* background-color: #b7e5ffbf; */
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   /* background-color: #b7e5ffbf; */
