--- a/stylesheets/education.css
+++ b/stylesheets/education.css
@@ -5,25 +5,25 @@
 }
 
 .college{
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .college__name, .field__name {
-    padding-bottom: 0;
+    padding-bottom: 3px;
     margin-bottom: 0;
 }
-.college__adress, .college__cgpa {
-    font-weight: lighter;
-  }
-  .college__name, .college__adress {
-    padding-top: 0;
-    margin-top: 0;
-    font-size: var(--size-base);
-  }
+.college__cgpa, .college__adress {
+  padding-top: 3px;
+  margin-top: 0;
+  font-size: var(--size-base);
+}
   
-  .field__name, .college__cgpa {
-    font-size: var(--size-lg);
-  }
+.college__name, .college__adress {
+  font-size: var(--size-lg);
+}
+.field__name, .college__cgpa {
+  font-size: var(--size-base);
+}
   
   /* screen size extra small */
   @media (min-width: 475px) {
@@ -53,6 +53,17 @@
   
     .college__name, .college__adress {
       font-size: var(--size-4xl);
+    }
+  }
+
+    
+  @media (min-width: 1530px){
+    .field__name, .college__cgpa {
+      font-size: var(--size-4xl);
+    }
+  
+    .college__name, .college__adress {
+      font-size: var(--size-5xl);
     }
   }
   
