--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -99,16 +99,8 @@
 }
 
 /* 2xl */
-/* @media (min-width: 1536px) {
+@media (min-width: 1530px) {
   .container {
-    max-width: 1536px;
-    box-shadow: 0 0 0.5rem;
+    max-width: 1530px;
   }
-  body{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: fit-content;
-    border: solid 1px red;
-  }
-} */
+}
