--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -38,6 +38,7 @@
   border-color: transparent;
   color: var(--txt-btn);
   font-weight: 600;
+  letter-spacing: 1px;
   background-color: var(--clr-btn);
   cursor:pointer;
 }
