--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -17,7 +17,7 @@
 
   /* Colors */
   --nav-light: #fff9;
-  --clr-btn: #3b82f6;
+  --clr-btn: #2563eb;
   --clr-btn-hover: #1d4ed8;
 
   /* Font Colors */
