--- a/stylesheets/education.css
+++ b/stylesheets/education.css
@@ -27,6 +27,10 @@
   font-size: var(--size-base);
 }
 
+.education__title {
+  font-size: var(--size-2xl);
+}
+
 /* screen size extra small */
 @media (min-width: 475px) {
   .education__title {
