--- a/stylesheets/work.css
+++ b/stylesheets/work.css
@@ -36,7 +36,8 @@
   margin: 0.5rem;
   padding: 0.5rem;
   max-height: 12rem;
-  max-width: 15rem;
+  width: 15rem;
+  height: 18rem;
   /* border: solid 1px black; */
   display: block;
   overflow: hidden;
